--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>title</title>
+    <title>RawFilm</title>
     <!--[if gte mso 9]><xml> <o:OfficeDocumentSettings> <o:AllowPNG/> <o:PixelsPerInch>96</o:PixelsPerInch> </o:OfficeDocumentSettings> </xml><![endif]-->
     <style>
         p {
